# CA_group_project

./: CMakeLists.txt
common/: CMakeLists.txt  binary.cpp  binaryio.hpp  image_types.hpp  imageio.cpp  imageio.hpp  metadata.cpp  metadata.hpp  progargs.cpp  progargs.hpp
imgaos/: CMakeLists.txt
imtool-aos/: CMakeLists.txt
test_resources/: CMakeLists.txt  ppm1.ppm
test_resources/resources/: ppm1.ppm
utest-common/: CMakeLists.txt  Metadata_Test.cpp  imageio_test.cpp  writeppm_test.cpp
